fix: theme color

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
-@config "../tailwind.config";
 @import '@mdxeditor/editor/style.css';
+
+@plugin './hero.ts';
+
+@source '../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+
+@custom-variant dark (&:is(.dark *));
 
 .dark-editor {
   --accentBase: var(--tomato-1);
